--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
         "inview": "^0.0.14",
         "mixitup": "^3.3.1",
         "postcss-cli": "^5.0.0",
+        "scrollmagic": "^2.0.7",
+        "scrollmagic-plugin-gsap": "^1.0.4",
         "siema": "^1.5.1",
         "stickybits": "^3.6.7",
         "uglifyjs-webpack-plugin": "^2.1.1",
